--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,6 +16,15 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
+
+
     dataBinding {
         enabled = true
     }
@@ -41,6 +50,7 @@ dependencies {
     def okhttp__Version = "4.4.0"
     def rx_retrofit_adapter_version = "3.0.0"
     def room_version = "2.2.5"
+    def lifecycle_version = "2.2.0"
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
@@ -58,9 +68,18 @@ dependencies {
     //viewmodel
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$viewmodel_Version"
 
+    //lifecycle
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
+
     //rxjava android
     implementation "io.reactivex.rxjava3:rxandroid:$rxjava_android_Version"
     implementation "io.reactivex.rxjava3:rxjava:3.0.2"
+
+    //Kotlin Coroutines
+    def coroutines_android_version = '1.3.7'
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_android_version"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_android_version"
 
     implementation "com.squareup.okhttp3:okhttp:$okhttp__Version"
     implementation "com.squareup.okhttp3:logging-interceptor:$okhttp__Version"
@@ -69,4 +88,5 @@ dependencies {
     implementation "androidx.room:room-runtime:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
+
 }
