--- a/app/build.gradle
+++ b/app/build.gradle
@@ -96,5 +96,7 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
     //map
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
+    //anim
+    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.19'
 
 }
