--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,8 +15,7 @@
         android:theme="@style/AppTheme">
         <activity android:name=".ui.home.HomeActivity">
         </activity>
-        <activity android:name=".ui.login.LoginActivity"
-            android:windowSoftInputMode="adjustResize|stateAlwaysHidden">
+        <activity android:name=".ui.login.LoginActivity">
         </activity>
         <activity android:name=".SplashScreenActivity">
             <intent-filter>
