--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.home.HomeActivity">
+        <activity android:name=".ui.home.HomeActivity"
+            android:theme="@style/AppThemeWithouToolbar">
         </activity>
         <activity android:name=".ui.login.LoginActivity"
             android:windowSoftInputMode="adjustResize|stateAlwaysHidden">
